# stm32f0-cmake-example

./: .cproject  .gitignore  .project  CMakeLists.txt  README.md  basic.ioc  build.sh  debug.launch
.github/workflows/: build.yml
CMake/: toolchain.cmake
Core/Src/: main.c
Docker/: docker-clean.bat  docker-compile.bat
Drivers/CMSIS/Device/ST/STM32F0xx/Include/: stm32f0xx.h
